codegen/tests/attribute_provide/fail/attribute_params.rs
use depcon::*;

trait Interface {}
struct Implementation;

#[provide(bad)]
impl Interface for Implementation {}

fn main() {}
